--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/keypress": "^2.0.30",
+    "chalk": "^5.3.0",
     "keypress": "^0.2.1"
   }
 }
